--- a/AspNetCoreWebAPIOnly/AspNetCoreWebAPIOnly.csproj
+++ b/AspNetCoreWebAPIOnly/AspNetCoreWebAPIOnly.csproj
@@ -9,7 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Cors" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
